--- a/code1-2.html
+++ b/code1-2.html
@@ -38,9 +38,10 @@
             </p>
 
             <hr />
-            From<cite> A Boy's Will,</cite> published by Henry Holt and Company &copy; 1913 (in the public domain)
-
-
+            <footer>
+                From<cite> A Boy's Will,</cite> published by Henry Holt and Company &copy; 1913 (in the public domain)
+            </footer>
+            
 
         
 
