--- a/code1-3.html
+++ b/code1-3.html
@@ -1,14 +1,44 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Free Web tutorials">
-        <meta name="keywords" content="HTML,CSS,Javascript">
-        <meta name="author" content="John Doe">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Armand Soto</title>
+        <link rel="stylesheet" href="./css/Task3 - code1-3_styles.css">
 
     </head>
     <body>
-        
+        <h1> Drawings from the Old Masters</h1>
+        <section>
+            <img src="./img/Task3 - drawing01.png" alt="Leonardo da Vinci">
+            <footer>The Battle of Anghiari - Leonardo da Vinci</footer>
+        </section>
+        <section>
+            <img src="./img/Task3 - drawing02.png" alt="Jacopo da Pontormo">
+            <footer>Study of a Youth - Jacopo da Pontormo</footer>
+        </section>
+        <section>
+            <img src="./img/Task3 - drawing03.png" alt="Raphael">
+            <footer>The Nativity - Raphael</footer>
+        </section>
+        <section>
+            <img src="./img/Task3 - drawing04.png" alt="Peter Paul Rubens">
+            <footer>Head of a Maid - Peter Paul Rubens</footer>
+        </section>
+        <section>
+            <img src="./img/Task3 - drawing05.png" alt="Andrea del Sarto">
+            <footer>Head of a Young Woman - Andrea del Sarto</footer>
+        </section>
+        <section>
+            <img src="./img/Task3 - drawing06.png" alt="Titan">
+            <footer>Head of a Youth - Titan</footer>
+        </section>
+
+
+
+
+
+
+
     </body>
 </html>
