HW 2 Final Touch Ups

--- a/code1-3.html
+++ b/code1-3.html
@@ -11,27 +11,51 @@
         <h1> Drawings from the Old Masters</h1>
         <section>
             <img src="./img/Task3 - drawing01.png" alt="Leonardo da Vinci">
-            <footer>The Battle of Anghiari - Leonardo da Vinci</footer>
+            <footer>
+                The battle of Anghiari
+                <br />
+                &mdash; Leonardo da Vinci
+            </footer>
         </section>
         <section>
             <img src="./img/Task3 - drawing02.png" alt="Jacopo da Pontormo">
-            <footer>Study of a Youth - Jacopo da Pontormo</footer>
+            <footer>
+                Study of a Youth
+                <br />
+                &mdash; Jacopo da Pontormo
+            </footer>
         </section>
         <section>
             <img src="./img/Task3 - drawing03.png" alt="Raphael">
-            <footer>The Nativity - Raphael</footer>
+            <footer>
+                The Nativity 
+                <br />
+                &mdash; Raphael
+            </footer>
         </section>
         <section>
             <img src="./img/Task3 - drawing04.png" alt="Peter Paul Rubens">
-            <footer>Head of a Maid - Peter Paul Rubens</footer>
+            <footer>
+                Head of a Maid
+                <br />
+                &mdash; Peter Paul Rubens
+            </footer>
         </section>
         <section>
             <img src="./img/Task3 - drawing05.png" alt="Andrea del Sarto">
-            <footer>Head of a Young Woman - Andrea del Sarto</footer>
+            <footer>
+                Head of a Young Woman
+                <br />
+                &mdash; Andrea del Sarto
+            </footer>
         </section>
         <section>
             <img src="./img/Task3 - drawing06.png" alt="Titan">
-            <footer>Head of a Youth - Titan</footer>
+            <footer>
+                Head of a Youth
+                <br />
+                &mdash; Titian
+            </footer>
         </section>
 
 
