Char encoding fix

--- a/code1-3.html
+++ b/code1-3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="description" content="Free Web tutorials">
         <title>Armand Soto</title>
         <link rel="stylesheet" href="./css/Task3 - code1-3_styles.css">
